avance: lectura base de datos

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -92,9 +92,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4678e842",
+   "metadata": {},
+   "source": [
+    "# Desarrollo "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prostate-nelson",
+   "id": "722529cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Librerias\n",
+    "%matplotlib notebook\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets, transforms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ce0f0af",
+   "metadata": {},
+   "source": [
+    "### útiles de ignite\n",
+    "- **Engine:** Runs a given process_function over each batch of a dataset, emitting events as it goes.\n",
+    "- **Events:** Allows users to attach functions to an Engine to fire functions at a specific event. Eg: EPOCH_COMPLETED, ITERATION_STARTED, etc.\n",
+    "- **Accuracy:** Metric to calculate accuracy over a dataset, for binary, multiclass, multilabel cases.\n",
+    "- **Loss:** General metric that takes a loss function as a parameter, calculate loss over a dataset.\n",
+    "- **RunningAverage:** General metric to attach to Engine during training.\n",
+    "- **ModelCheckpoint:** Handler to checkpoint models.\n",
+    "- **EarlyStopping:** Handler to stop training based on a score function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54b622c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ignite.engine import Events, create_supervised_trainer, create_supervised_evaluator\n",
+    "from ignite.metrics import Accuracy, Loss, RunningAverage, ConfusionMatrix\n",
+    "from ignite.handlers import ModelCheckpoint, EarlyStopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef553874",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transformación a Tensor y normalización de la data\n",
+    "transform = transforms.Compose([transforms.ToTensor(),\n",
+    "                                transforms.Normalize((0.5,), (0.5,))])\n",
+    "\n",
+    "# Descarga base de datos\n",
+    "trainset = datasets.FashionMNIST('./data', download=False, train=True, transform=transform)\n",
+    "train_loader = DataLoader(trainset, batch_size=64, shuffle=True)\n",
+    "validationset = datasets.FashionMNIST('./data', download=False, train=False, transform=transform)\n",
+    "val_loader = DataLoader(validationset, batch_size=64, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d22b679",
    "metadata": {},
    "outputs": [],
    "source": []
