avance: implementacion Lenet5

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -1198,10 +1198,10 @@
     "\n",
     "# Descarga base de datos\n",
     "trainset = datasets.FashionMNIST('./data', download=False, train=True, transform=transform)\n",
-    "#train_loader = DataLoader(trainset, batch_size=64, shuffle=True)\n",
+    "train_loader = DataLoader(trainset, batch_size=64, shuffle=True)\n",
     "\n",
     "validationset = datasets.FashionMNIST('./data', download=False, train=False, transform=transform)\n",
-    "#val_loader = DataLoader(validationset, batch_size=64, shuffle=True)\n",
+    "val_loader = DataLoader(validationset, batch_size=64, shuffle=True)\n",
     "\n",
     "image, label = trainset[0]\n",
     "display(len(trainset), type(image), image.dtype, type(label))\n",
@@ -1216,12 +1216,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d22b679",
+   "cell_type": "markdown",
+   "id": "1449b139",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Lenet5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05d57d85",
+   "metadata": {},
+   "source": [
+    "La arquitectura considera:\n",
+    "- Dos capas convolucionales con 6 y 16 bancos de filtros, respectivamente.\n",
+    "- Las capas convolucionales usan filtros de 5x5 píxeles.\n",
+    "- Se usa max-pooling de tamaño 2x2 y stride 2.\n",
+    "- La primera capa convolucional espera un minibatch de imágenes de 1 canal (blanco y negro).\n",
+    "- Usaremos la función de activacion ReLU.\n",
+    "- Se usan tres capas completamente conectadas con 120, 84 y 10 neuronas, respectivamente.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "75bcde8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lenet5(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+      "    (1): ReLU()\n",
+      "    (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (3): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+      "    (4): ReLU()\n",
+      "    (5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Linear(in_features=400, out_features=120, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=120, out_features=84, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=84, out_features=10, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "class Lenet5(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(type(self), self).__init__()\n",
+    "        \n",
+    "        # La entrada son imagenes de 1x32x32\n",
+    "        self.features = nn.Sequential(nn.Conv2d(1,6,5,padding=2),\n",
+    "                                      nn.ReLU(),\n",
+    "                                      nn.MaxPool2d(2),\n",
+    "                                      nn.Conv2d(6,16,5),\n",
+    "                                      nn.ReLU(),\n",
+    "                                      nn.MaxPool2d(2))\n",
+    "        \n",
+    "        self.classifier = nn.Sequential(nn.Linear(16*5*5,120),\n",
+    "                                        nn.ReLU(),\n",
+    "                                        nn.Linear(120, 84),\n",
+    "                                        nn.ReLU(),\n",
+    "                                        nn.Linear(84,10))\n",
+    "        def forward(self, x):\n",
+    "            z = self.features(x)\n",
+    "            # Esto es de tamaño Mx16x5x5\n",
+    "            z = view(-1, 16*5*5)\n",
+    "            # Esto es de tamaño Mx400\n",
+    "            return self.classifier(z)\n",
+    "model = Lenet5()\n",
+    "print(model)"
+   ]
   }
  ],
  "metadata": {
