avance: análisis de errores (matriz de conf., entropia(?))

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "949d0a0c",
+   "id": "ba0be797",
    "metadata": {},
    "source": [
     "# Lenet5"
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1435bc7",
+   "id": "ad0d024d",
    "metadata": {},
    "source": [
     "La arquitectura considera:\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "062e65b8",
+   "id": "14c3109d",
    "metadata": {
     "scrolled": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "218bed0f",
+   "id": "e0b36d63",
    "metadata": {},
    "source": [
     "#### GD con paso adaptativo\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb5d732",
+   "id": "82ea0689",
    "metadata": {},
    "source": [
     "### Entrenamiento de la red convolucional"
@@ -234,17 +234,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2db7e89b",
+   "id": "1ffb6ed1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ignite.engine import  Engine, Events, create_supervised_trainer, create_supervised_evaluator\n",
-    "from ignite.metrics import Accuracy, Loss, RunningAverage, ConfusionMatrix"
+    "from ignite.metrics import Accuracy, Loss, RunningAverage"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f0408bf4",
+   "id": "ef93f1eb",
    "metadata": {},
    "source": [
     "##### útiles de ignite\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "298a21f5",
+   "id": "dace6244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,9 +269,7 @@
     "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-3)\n",
     "criterion = torch.nn.CrossEntropyLoss(reduction='sum')\n",
     "max_epochs = 100\n",
-    "device = torch.device('cpu')\n",
-    "# Descomentar para el caso de poseer GPU \n",
-    "#device = torch.device('cuda:0')\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = model.to(device)\n",
     "\n",
     "# Esto es lo que hace el engine de entrenamiento\n",
@@ -304,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72b4c1d1",
+   "id": "48d4c23f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b035ab27",
+   "id": "fda69363",
    "metadata": {
     "scrolled": true
    },
@@ -347,13 +345,26 @@
     "                                best_model_handler, {'lenet5': model})\n",
     "    \n",
     "    \n",
-    "    # ACÁ SE CAE\n",
+    "    \n",
+    "    ############### ACÁ SE CAE ###############\n",
+    "    ############### ACÁ SE CAE ###############\n",
+    "    ############### ACÁ SE CAE ###############\n",
+    "    ############### ACÁ SE CAE ###############\n",
+    "    \n",
     "    trainer.run(train_loader, max_epochs=max_epochs)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "282abd6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "ea595528",
+   "id": "c30234d7",
    "metadata": {},
    "source": [
     "### Análisis de errores\n"
@@ -362,10 +373,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a7ff0aa",
+   "id": "d193f00a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#No contamos con un conjunto de test >:(\n",
+    "\n",
+    "#test_loader = DataLoader(testset, shuffle=False, batch_size=512)\n",
+    "#test_targets = testset.targets.numpy()\n",
+    "\n",
+    "\n",
+    "prediction_test = []\n",
+    "\n",
+    "\n",
+    "entropy = []\n",
+    "for mbdata, label in test_loader:\n",
+    "    logits = model.forward(mbdata)\n",
+    "    probs = torch.nn.Softmax(dim=1)(logits)\n",
+    "    entropy.append(-(logits*probs).sum(1).detach().numpy())\n",
+    "    prediction_test.append(logits.argmax(dim=1).detach().numpy())\n",
+    "prediction_test = np.concatenate(prediction_test)\n",
+    "entropy = np.concatenate(entropy)\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "def plot_confusion_matrix(cm, labels, cmap=plt.cm.Blues):\n",
+    "    fig, ax = plt.subplots(figsize=(5,5),tight_layout=True)\n",
+    "    ax.imshow(cm,interpolation='nearest', cmap=cmap)\n",
+    "    for i in range(cm.shape[1]):\n",
+    "        for j in range(cm.shape[0]):\n",
+    "            ax.text(j,i,\"{:,}\".format(cm[i,j]),\n",
+    "                    horizontalalignment=\"center\", verticalalignment=\"center\",\n",
+    "                    color=\"white\" if cm[i,j]> np.amax(cm)/2 else \"black\")\n",
+    "            ax.set_title(\"Matriz de confusión: \")\n",
+    "            tick_marks=np.arange(len(labels))\n",
+    "            plt.xticks(tick_marks, labels)\n",
+    "            plt.yticks(tick_marks, labels)\n",
+    "            plt.ylabel(\"Etiqueta real\")\n",
+    "            plt.xlabel(\"Predicción\")\n",
+    "        \n",
+    "        \n",
+    "cm = confusion_matrix(y_true, test_targets, y_pred=prediction_test)\n",
+    "plot_confusion_matrix(cm, labels=[str(i) for i in range(10)])\n",
+    "print(classification_report(test_targets, prediction_test, digits=3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91afed5d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b7e4a84",
+   "metadata": {},
+   "source": [
+    "### Early stopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0d0dc10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_function(engine):\n",
+    "    val_loss = engine.state.metrics['nll']\n",
+    "    return -val_loss\n",
+    "\n",
+    "handler = EarlyStopping(patience=10, score_function=score_function, trainer=trainer)\n",
+    "val_evaluator.add_event_handler(Events.COMPLETED, handler)"
+   ]
   }
  ],
  "metadata": {
