añadir vínculos de ayuda

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba0be797",
+   "id": "5efd8107",
    "metadata": {},
    "source": [
     "# Lenet5"
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad0d024d",
+   "id": "6f3eba33",
    "metadata": {},
    "source": [
     "La arquitectura considera:\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c3109d",
+   "id": "196a6d1f",
    "metadata": {
     "scrolled": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b36d63",
+   "id": "eb438d0a",
    "metadata": {},
    "source": [
     "#### GD con paso adaptativo\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82ea0689",
+   "id": "2baabf3a",
    "metadata": {},
    "source": [
     "### Entrenamiento de la red convolucional"
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ffb6ed1",
+   "id": "e40632b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef93f1eb",
+   "id": "37667519",
    "metadata": {},
    "source": [
     "##### útiles de ignite\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dace6244",
+   "id": "aadd2f03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48d4c23f",
+   "id": "447652d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fda69363",
+   "id": "780fe28f",
    "metadata": {
     "scrolled": true
    },
@@ -357,14 +357,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "282abd6b",
+   "id": "3b8a5308",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c30234d7",
+   "id": "6e58944d",
    "metadata": {},
    "source": [
     "### Análisis de errores\n"
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d193f00a",
+   "id": "07118612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,16 +419,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91afed5d",
+   "cell_type": "markdown",
+   "id": "f2e2c594",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[clase del profe](https://www.youtube.com/watch?v=jevIdbQ_OVw)\n",
+    "\n",
+    "\n",
+    "[actividad recontra parecida](https://colab.research.google.com/github/pytorch/ignite/blob/master/examples/notebooks/FashionMNIST.ipynb#scrollTo=0mcIq0lc6ptN)\n",
+    "\n",
+    "\n",
+    "[repo del curso](https://github.com/phuijse/INFO257/blob/master/notebooks/clases/4_red_convolucional.ipynb)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "6b7e4a84",
+   "id": "698826fa",
    "metadata": {},
    "source": [
     "### Early stopping"
@@ -437,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0d0dc10",
+   "id": "794409e7",
    "metadata": {},
    "outputs": [],
    "source": [
