fix: particion correcta del dataset

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -111,7 +111,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch\n",
-    "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets, transforms"
    ]
   },
@@ -119,31 +118,65 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ef553874",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "# transformación a Tensor y normalización de la data\n",
-    "transform = transforms.Compose([transforms.ToTensor()\n",
-    "                               # ,transforms.Normalize((0.5,), (0.5,))\n",
-    "                               ])\n",
+    "# transformación a Tensor\n",
     "\n",
-    "# Descarga base de datos\n",
-    "trainset = datasets.FashionMNIST('./data', download=False, train=True, transform=transform)\n",
-    "train_loader = DataLoader(trainset, batch_size=32, shuffle=True)\n",
+    "transform = transforms.Compose([transforms.ToTensor()])\n",
     "\n",
-    "validationset = datasets.FashionMNIST('./data', download=False, train=False, transform=transform)\n",
-    "val_loader = DataLoader(validationset, batch_size=256, shuffle=False)\n",
+    "# Descarga base de datos (Cambiar download=True)\n",
+    "mnist_train_data = datasets.FashionMNIST('./data', download=False, train=True, transform=transform)\n",
+    "mnist_test_data = datasets.FashionMNIST('./data', download=False, train=False, transform=transform)\n",
     "\n",
-    "image, label = trainset[0]\n",
-    "display(len(trainset), type(image), image.dtype, type(label))\n",
+    "# Visualización de 10 datos\n",
+    "image, label = mnist_train_data[0]\n",
+    "display(len(mnist_train_data), type(image), image.dtype, type(label))\n",
     "fig, ax = plt.subplots(1,10,figsize=(8,1.5), tight_layout=True)\n",
-    "idx = np.random.permutation(len(trainset))[:10]\n",
+    "idx = np.random.permutation(len(mnist_train_data))[:10]\n",
     "for k in range(10):\n",
-    "    image, label = trainset[idx[k]]\n",
+    "    image, label = mnist_train_data[idx[k]]\n",
     "    ax[k].imshow(image[0,:,:].numpy(), cmap=plt.cm.Greys_r)\n",
     "    ax[k].axis('off')\n",
     "    ax[k].set_title(label)\n",
-    "image.shape"
+    "image.shape\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7eb662",
+   "metadata": {},
+   "source": [
+    "### Dataloaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60676d34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set de entrenamiento y validación estratificados\n",
+    "from torch.utils.data import DataLoader, Subset\n",
+    "import sklearn.model_selection\n",
+    "\n",
+    "sss = sklearn.model_selection.StratifiedShuffleSplit(train_size=.75).split(mnist_train_data.data, \n",
+    "                                                                           mnist_train_data.targets)\n",
+    "train_idx, valid_idx = next(sss)\n",
+    "\n",
+    "train_dataset = Subset(mnist_train_data, train_idx)\n",
+    "train_loader= DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "\n",
+    "valid_dataset = Subset(mnist_train_data, valid_idx)\n",
+    "valid_loader = DataLoader(valid_dataset, batch_size=64, shuffle=False)\n",
+    "\n",
+    "display(len(train_dataset), len(valid_dataset))\n",
+    "\n"
    ]
   },
   {
@@ -151,7 +184,7 @@
    "id": "5efd8107",
    "metadata": {},
    "source": [
-    "# Lenet5"
+    "## 1) Lenet5 (fix)"
    ]
   },
   {
@@ -165,7 +198,8 @@
     "- Se usa max-pooling de tamaño 2x2 y stride 2.\n",
     "- La primera capa convolucional espera un minibatch de imágenes de 1 canal (blanco y negro).\n",
     "- Usaremos la función de activacion ReLU.\n",
-    "- Se usan tres capas completamente conectadas con 120, 84 y 10 neuronas, respectivamente.\n"
+    "- Se usan tres capas completamente conectadas con 120, 84 y 10 neuronas, respectivamente.\n",
+    "\n"
    ]
   },
   {
@@ -177,6 +211,8 @@
    },
    "outputs": [],
    "source": [
+    "# OJO: Nuestras imágenes son de 1x28x28, por lo que hay que modificar algunos parametros de esta clase\n",
+    "\n",
     "import torch.nn as nn\n",
     "class Lenet5(nn.Module):\n",
     "    def __init__(self):\n",
@@ -201,26 +237,27 @@
     "            z = view(-1, 16*5*5)\n",
     "            # Esto es de tamaño Mx400\n",
     "            return self.classifier(z)\n",
+    "        \n",
     "model = Lenet5()\n",
     "print(model)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eb438d0a",
+   "id": "5e16f750",
    "metadata": {},
    "source": [
-    "#### GD con paso adaptativo\n",
-    "\n",
-    "\n",
-    "\n",
-    "    torch.optim.Adam(params,            # parámetros de la red neuronal\n",
-    "                     1r=0.001,          # Tasa de aprendizaje inicial\n",
-    "                     betas=(0.9,0.999), # Factores de olvido de los Gradientes Históricos\n",
-    "                     eps=1e-08,         # Término para evitar división por cero\n",
-    "                     weight_decay=0,\n",
-    "                     amsgrad=False)     # Corrección para mejorar la convergencia de Adam en ciertos casos\n",
-    "\n"
+    "## 2) Arquitectura propuesta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82af10c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aquí va la arquitectura"
    ]
   },
   {
@@ -260,13 +297,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "333d9f25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-3)\n",
+    "#optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
+    "#optimizer = optim.RMSprop(params, lr=0.01, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0, centered=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "aadd2f03",
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.manual_seed(12345) # Inicialización\n",
     "model = Lenet5()\n",
-    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-3)\n",
+    "\n",
     "criterion = torch.nn.CrossEntropyLoss(reduction='sum')\n",
     "max_epochs = 100\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -377,7 +426,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#No contamos con un conjunto de test >:(\n",
     "\n",
     "#test_loader = DataLoader(testset, shuffle=False, batch_size=512)\n",
     "#test_targets = testset.targets.numpy()\n",
