Analisis de errores funcionando
loss y accuracy no se mueven del valor inicial; ojo

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -212,7 +212,8 @@
     "valid_dataset = Subset(mnist_train_data, valid_idx)\n",
     "valid_loader = DataLoader(valid_dataset, batch_size=256, shuffle=False)\n",
     "\n",
-    "display(len(train_dataset), len(valid_dataset))\n"
+    "display(len(train_dataset), len(valid_dataset))\n",
+    "\n"
    ]
   },
   {
@@ -457,12 +458,6 @@
     "                                best_model_handler, {'lenet5': model})\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    ############### ACÁ SE CAE ###############\n",
-    "    ############### ACÁ SE CAE ###############\n",
-    "    ############### ACÁ SE CAE ###############\n",
-    "    ############### ACÁ SE CAE ###############\n",
-    "    \n",
     "    trainer.run(train_loader, max_epochs=max_epochs)"
    ]
   },
@@ -482,19 +477,23 @@
    "outputs": [],
    "source": [
     "\n",
-    "#test_loader = DataLoader(testset, shuffle=False, batch_size=512)\n",
-    "#test_targets = testset.targets.numpy()\n",
-    "\n",
+    "test_loader = DataLoader(mnist_test_data, shuffle=False, batch_size=512)\n",
+    "test_targets = mnist_test_data.targets.numpy()\n",
     "\n",
     "prediction_test = []\n",
     "\n",
     "\n",
     "entropy = []\n",
     "for mbdata, label in test_loader:\n",
+    "    mbdata=mbdata.to(device)\n",
     "    logits = model.forward(mbdata)\n",
     "    probs = torch.nn.Softmax(dim=1)(logits)\n",
-    "    entropy.append(-(logits*probs).sum(1).detach().numpy())\n",
-    "    prediction_test.append(logits.argmax(dim=1).detach().numpy())\n",
+    "    ent_value = -(logits*probs).sum(1)\n",
+    "    ent_value = ent_value.to(\"cpu\")\n",
+    "    entropy.append(ent_value.detach().numpy())\n",
+    "    pred = logits.argmax(dim=1)\n",
+    "    pred = pred.to(\"cpu\")\n",
+    "    prediction_test.append(pred.detach().numpy())\n",
     "prediction_test = np.concatenate(prediction_test)\n",
     "entropy = np.concatenate(entropy)\n",
     "\n",
@@ -516,7 +515,7 @@
     "            plt.xlabel(\"Predicción\")\n",
     "        \n",
     "        \n",
-    "cm = confusion_matrix(y_true, test_targets, y_pred=prediction_test)\n",
+    "cm = confusion_matrix(y_true=test_targets, y_pred=prediction_test)\n",
     "plot_confusion_matrix(cm, labels=[str(i) for i in range(10)])\n",
     "print(classification_report(test_targets, prediction_test, digits=3))"
    ]
