avance: métricas varias

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -221,7 +221,7 @@
    "id": "6594c6ea",
    "metadata": {},
    "source": [
-    "## 1) LeNet-5\n",
+    "### 1. LeNet-5\n",
     "\n",
     "<img src=\"images/lenet5.png\">\n"
    ]
@@ -302,7 +302,7 @@
    "id": "f5a9546a",
    "metadata": {},
    "source": [
-    "## 2) Arquitectura propuesta"
+    "### 2. Arquitectura propuesta"
    ]
   },
   {
@@ -347,7 +347,7 @@
    "id": "4acc335b",
    "metadata": {},
    "source": [
-    "### Entrenamiento de la red convolucional"
+    "### 3. Entrenamiento de las redes convolucionales"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "id": "f1adee23",
    "metadata": {},
    "source": [
-    "### Análisis de errores\n"
+    "### 4. Análisis de errores\n"
    ]
   },
   {
@@ -496,28 +496,7 @@
     "    prediction_test.append(pred.detach().numpy())\n",
     "prediction_test = np.concatenate(prediction_test)\n",
     "entropy = np.concatenate(entropy)\n",
-    "\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "\n",
-    "def plot_confusion_matrix(cm, labels, cmap=plt.cm.Blues):\n",
-    "    fig, ax = plt.subplots(figsize=(5,5),tight_layout=True)\n",
-    "    ax.imshow(cm,interpolation='nearest', cmap=cmap)\n",
-    "    for i in range(cm.shape[1]):\n",
-    "        for j in range(cm.shape[0]):\n",
-    "            ax.text(j,i,\"{:,}\".format(cm[i,j]),\n",
-    "                    horizontalalignment=\"center\", verticalalignment=\"center\",\n",
-    "                    color=\"white\" if cm[i,j]> np.amax(cm)/2 else \"black\")\n",
-    "            ax.set_title(\"Matriz de confusión: \")\n",
-    "            tick_marks=np.arange(len(labels))\n",
-    "            plt.xticks(tick_marks, labels)\n",
-    "            plt.yticks(tick_marks, labels)\n",
-    "            plt.ylabel(\"Etiqueta real\")\n",
-    "            plt.xlabel(\"Predicción\")\n",
-    "        \n",
-    "        \n",
-    "cm = confusion_matrix(y_true=test_targets, y_pred=prediction_test)\n",
-    "plot_confusion_matrix(cm, labels=[str(i) for i in range(10)])\n",
-    "print(classification_report(test_targets, prediction_test, digits=3))"
+    "\n"
    ]
   },
   {
@@ -556,6 +535,117 @@
     "handler = EarlyStopping(patience=10, score_function=score_function, trainer=trainer)\n",
     "val_evaluator.add_event_handler(Events.COMPLETED, handler)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cecb362e",
+   "metadata": {},
+   "source": [
+    "### 5. Métricas de evaluación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20857007",
+   "metadata": {},
+   "source": [
+    "#### Matriz de confusión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75a04811",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "def plot_confusion_matrix(cm, labels, cmap=plt.cm.Blues):\n",
+    "    fig, ax = plt.subplots(figsize=(5,5),tight_layout=True)\n",
+    "    ax.imshow(cm,interpolation='nearest', cmap=cmap)\n",
+    "    for i in range(cm.shape[1]):\n",
+    "        for j in range(cm.shape[0]):\n",
+    "            ax.text(j,i,\"{:,}\".format(cm[i,j]),\n",
+    "                    horizontalalignment=\"center\", verticalalignment=\"center\",\n",
+    "                    color=\"white\" if cm[i,j]> np.amax(cm)/2 else \"black\")\n",
+    "            ax.set_title(\"Matriz de confusión: \")\n",
+    "            tick_marks=np.arange(len(labels))\n",
+    "            plt.xticks(tick_marks, labels)\n",
+    "            plt.yticks(tick_marks, labels)\n",
+    "            plt.ylabel(\"Etiqueta real\")\n",
+    "            plt.xlabel(\"Predicción\")\n",
+    "        \n",
+    "        \n",
+    "cm = confusion_matrix(y_true=test_targets, y_pred=prediction_test)\n",
+    "plot_confusion_matrix(cm, labels=[str(i) for i in range(10)])\n",
+    "print(classification_report(test_targets, prediction_test, digits=3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa3f4530",
+   "metadata": {},
+   "source": [
+    "#### f1-score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a3d2fca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(y_true, y_pred, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbb09367",
+   "metadata": {},
+   "source": [
+    "#### Precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63b3ab75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score\n",
+    "precision_score(y_true, y_pred, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4b4ee40",
+   "metadata": {},
+   "source": [
+    "#### Recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "774f304c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import recall_score\n",
+    "recall_score(y_true, y_pred, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5c046a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
