--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -180,7 +180,6 @@
     "    ax[k].axis('off')\n",
     "    ax[k].set_title(label)\n",
     "image.shape\n",
-    "\n",
     "                               "
    ]
   },
@@ -307,6 +306,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49b1d316",
+   "metadata": {},
+   "source": [
+    "La arquitectura propuesta es bastante similar a LeNet5, sin embargo, cuenta con Dropout, una técnica de regularización para reducir el sobreajuste en redes neuronales. Dropout omite aleatoriamente neuronas durante el proceso de entrenamiento de una red neuronal.\n",
+    "\n",
+    "En este caso, agregamos dropout en la capa 2 y en la capa 4. Para estas dos capas, probamos con distintas probabildades de dropout, pero obtuvimos los mejores resultados con:\n",
+    "\n",
+    "- p = 0.1 en la capa 2 y 0.2 en la capa 4\n",
+    "- p = 0 en la capa 2 y 0.2 en la capa 4."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6cd23e33",
@@ -380,7 +392,7 @@
     "model = Lenet5_mod()\n",
     "model = model.to(device)\n",
     "criterion = torch.nn.CrossEntropyLoss(reduction='sum')\n",
-    "max_epochs = 100"
+    "max_epochs = 5"
    ]
   },
   {
@@ -525,13 +537,37 @@
     "\n",
     "[repo del curso](https://github.com/phuijse/INFO257/blob/master/notebooks/clases/4_red_convolucional.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f578009b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ee2cbae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da7d3f19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "257",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "257"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -543,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
