--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -92,6 +92,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2822a878",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "79cf02e1",
    "metadata": {},
@@ -113,44 +121,16 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch\n",
-    "print(torch.cuda.is_available())\n",
-    "from torchvision import datasets, transforms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cc8494d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.utils.data import DataLoader, Subset\n",
-    "import sklearn.model_selection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38232dcb",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from ignite.engine import  Engine, Events, create_supervised_trainer, create_supervised_evaluator\n",
-    "from ignite.metrics import Accuracy, Loss, RunningAverage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35fa3620",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import time\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "from ignite.handlers import ModelCheckpoint, EarlyStopping"
+    "print(torch.cuda.is_available())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c7f950c",
+   "metadata": {},
+   "source": [
+    "## 1. Importación y pre-procesamiento del dataset"
    ]
   },
   {
@@ -163,6 +143,7 @@
    "outputs": [],
    "source": [
     "# transformación a Tensor y resize de las imágenes\n",
+    "from torchvision import datasets, transforms\n",
     "transform = transforms.Compose([transforms.Resize(32),transforms.ToTensor()])\n",
     "\n",
     "# Descarga base de datos (Cambiar download=True)\n",
@@ -188,7 +169,7 @@
    "id": "c4113cc2",
    "metadata": {},
    "source": [
-    "### Dataloaders"
+    "#### Dataloaders"
    ]
   },
   {
@@ -199,7 +180,8 @@
    "outputs": [],
    "source": [
     "# Set de entrenamiento y validación estratificados\n",
-    "\n",
+    "from torch.utils.data import DataLoader, Subset\n",
+    "import sklearn.model_selection\n",
     "\n",
     "sss = sklearn.model_selection.StratifiedShuffleSplit(train_size=.75).split(mnist_train_data.data, \n",
     "                                                                           mnist_train_data.targets)\n",
@@ -220,7 +202,7 @@
    "id": "6594c6ea",
    "metadata": {},
    "source": [
-    "## 1) LeNet-5\n",
+    "## 2. LeNet-5\n",
     "\n",
     "<img src=\"images/lenet5.png\">\n"
    ]
@@ -302,7 +284,7 @@
    "id": "f5a9546a",
    "metadata": {},
    "source": [
-    "## 2) Arquitectura propuesta"
+    "## 3. Arquitectura propuesta"
    ]
   },
   {
@@ -362,7 +344,19 @@
    "id": "4acc335b",
    "metadata": {},
    "source": [
-    "### Entrenamiento de la red convolucional"
+    "## 4. Entrenamiento de la red convolucional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0c0a8f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ignite.engine import  Engine, Events, create_supervised_trainer, create_supervised_evaluator\n",
+    "from ignite.metrics import Accuracy, Loss, RunningAverage\n",
+    "from ignite.handlers import ModelCheckpoint, EarlyStopping"
    ]
   },
   {
@@ -433,6 +427,8 @@
    "outputs": [],
    "source": [
     "# Contexto de escritura de datos para tensorboard\n",
+    "\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "with SummaryWriter(log_dir=f'/tmp/tensorboard/mod_lenet5_mnist_{time.time_ns()}') as writer:\n",
     "\n",
     "    @trainer.on(Events.EPOCH_COMPLETED(every=1)) # Cada 1 epocas\n",
@@ -500,7 +496,26 @@
     "    prediction_test.append(pred.detach().numpy())\n",
     "prediction_test = np.concatenate(prediction_test)\n",
     "entropy = np.concatenate(entropy)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "758765d6",
+   "metadata": {},
+   "source": [
+    "## 5. Métricas de evaluación\n",
     "\n",
+    "### 5.1 Matriz de confusión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4de35f8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "\n",
     "def plot_confusion_matrix(cm, labels, cmap=plt.cm.Blues):\n",
@@ -526,25 +541,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e5bdee7",
+   "id": "0b57f05a",
    "metadata": {},
    "source": [
-    "[clase del profe](https://www.youtube.com/watch?v=jevIdbQ_OVw)\n",
+    "### 5.2 Reportes de clasificación\n",
+    "#### 5.2.1 precision-score\n",
+    "Precision-score es la relación tp / (tp + fp) donde tp es el número de verdaderos positivos y fp el número de falsos positivos. Precision-score es intuitivamente la capacidad del clasificador de no etiquetar como positiva una muestra que es negativa.\n",
     "\n",
-    "\n",
-    "[actividad recontra parecida](https://colab.research.google.com/github/pytorch/ignite/blob/master/examples/notebooks/FashionMNIST.ipynb#scrollTo=0mcIq0lc6ptN)\n",
-    "\n",
-    "\n",
-    "[repo del curso](https://github.com/phuijse/INFO257/blob/master/notebooks/clases/4_red_convolucional.ipynb)"
+    "El mejor valor es 1 y el peor valor es 0."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f578009b",
+   "id": "539278a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import precision_score\n",
+    "precision_score(y_true, y_pred, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d262cd1a",
+   "metadata": {},
+   "source": [
+    "#### 5.2.2 recall-score\n",
+    "El recall-score es la relación tp / (tp + fn) donde tp es el número de verdaderos positivos y fn el número de falsos negativos. Recall-score es intuitivamente la capacidad del clasificador de encontrar todas las muestras positivas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "435f793c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import recall_score\n",
+    "recall_score(y_true, y_pred, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d3fded1",
+   "metadata": {},
+   "source": [
+    "#### 5.2.3 f1-score\n",
+    "\n",
+    "f1-score se puede interpretar como un promedio ponderado de la precision y recall, donde una f1-score alcanza su mejor valor en 1 y la peor puntuación en 0. La contribución relativa de precision y recall a la f1-score son iguales.\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -552,12 +598,23 @@
    "id": "1ee2cbae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(y_true, y_pred, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59ee567",
+   "metadata": {},
+   "source": [
+    "## 6. Comentarios finales"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da7d3f19",
+   "id": "3bef351d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -565,7 +622,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -579,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
