--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -294,7 +294,19 @@
    "source": [
     "La arquitectura propuesta es bastante similar a LeNet5, sin embargo, cuenta con Dropout, una técnica de regularización para reducir el sobreajuste en redes neuronales. Dropout omite aleatoriamente neuronas durante el proceso de entrenamiento de una red neuronal.\n",
     "\n",
-    "En este caso, agregamos dropout en la capa 2 y en la capa 4. Para estas dos capas, probamos con distintas probabildades de dropout, pero obtuvimos los mejores resultados con:\n",
+    "En este caso, agregamos dropout en la capa 2 y en la capa 4. Para estas dos capas, probamos con distintas probabildades de dropout:\n",
+    "\n",
+    "| Modificacion | Capa 2 | Capa 4 |Comparacion Lenet|\n",
+    "|--------------|--------|--------|-----------|\n",
+    "|Dropout|p=0.2|--|Mejora|\n",
+    "|Dropout|--|p=0.2|Similar|\n",
+    "|Dropout|p=0.2|p=0.2|Mejora leve|\n",
+    "|Dropout|p=0.1|p=0.1|Similar|\n",
+    "|Dropout|p=0.4|p=0.4|Empeora|\n",
+    "|Dropout|p=0.1|p=0.2|Mejora|\n",
+    "|Dropout|p=0.2|p=0.1|Mejora leve|\n",
+    "\n",
+    "pero obtuvimos los mejores resultados con:\n",
     "\n",
     "- p = 0.1 en la capa 2 y 0.2 en la capa 4\n",
     "- p = 0 en la capa 2 y 0.2 en la capa 4."
@@ -383,7 +395,8 @@
    "source": [
     "torch.manual_seed(12345) # Inicialización\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = Lenet5_mod()\n",
+    "model = Lenet5()\n",
+    "#model = Lenet5_mod()\n",
     "model = model.to(device)\n",
     "criterion = torch.nn.CrossEntropyLoss(reduction='sum')\n",
     "max_epochs = 5"
@@ -396,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-3)\n",
+    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-2)\n",
     "#optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
     "#optimizer = optim.RMSprop(params, lr=0.01, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0, centered=False)"
    ]
@@ -612,9 +625,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3688c3f7",
+   "metadata": {},
+   "source": [
+    "### 6.1 Modelos resultantes\n",
+    "\n",
+    "#### 6.1.1 Lenet\n",
+    "\n",
+    "|Optimizador|Parametro de optimizador|Batch de entrenamiento|precision-score|recall-score|f1-score|\n",
+    "|-----------|------------------------|----------------------|---------------|------------|--------|\n",
+    "|Adam|learning rate = $10^{-2}$|32||||\n",
+    "\n",
+    "#### 6.1.2 Lenet modificado\n",
+    "\n",
+    "|Optimizador|Parametro de optimizador|Batch de entrenamiento|precision-score|recall-score|f1-score|\n",
+    "|-----------|------------------------|----------------------|---------------|------------|--------|\n",
+    "|||||||"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bef351d",
+   "id": "45997002",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -636,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
