--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -399,7 +399,7 @@
     "#model = Lenet5_mod()\n",
     "model = model.to(device)\n",
     "criterion = torch.nn.CrossEntropyLoss(reduction='sum')\n",
-    "max_epochs = 5"
+    "max_epochs = 100"
    ]
   },
   {
@@ -409,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-2)\n",
+    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-5)\n",
     "#optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
     "#optimizer = optim.RMSprop(params, lr=0.01, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0, centered=False)"
    ]
@@ -442,7 +442,7 @@
     "# Contexto de escritura de datos para tensorboard\n",
     "\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
-    "with SummaryWriter(log_dir=f'/tmp/tensorboard/mod_lenet5_mnist_{time.time_ns()}') as writer:\n",
+    "with SummaryWriter(log_dir=f'/tmp/tensorboard/lenet5_mnist_{time.time_ns()}') as writer:\n",
     "\n",
     "    @trainer.on(Events.EPOCH_COMPLETED(every=1)) # Cada 1 epocas\n",
     "    def log_results(engine):\n",
@@ -572,7 +572,7 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import precision_score\n",
-    "precision_score(y_true, y_pred, average='macro')"
+    "precision_score(test_targets, prediction_test, average='macro')"
    ]
   },
   {
@@ -592,7 +592,7 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import recall_score\n",
-    "recall_score(y_true, y_pred, average='macro')"
+    "recall_score(test_targets, prediction_test, average='macro')"
    ]
   },
   {
@@ -613,7 +613,7 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import f1_score\n",
-    "f1_score(y_true, y_pred, average='macro')"
+    "f1_score(test_targets, prediction_test, average='macro')"
    ]
   },
   {
@@ -626,16 +626,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3688c3f7",
+   "id": "5cc90db6",
    "metadata": {},
    "source": [
     "### 6.1 Modelos resultantes\n",
     "\n",
     "#### 6.1.1 Lenet\n",
     "\n",
-    "|Optimizador|Parametro de optimizador|Batch de entrenamiento|precision-score|recall-score|f1-score|\n",
-    "|-----------|------------------------|----------------------|---------------|------------|--------|\n",
-    "|Adam|learning rate = $10^{-2}$|32||||\n",
+    "|Optimizador|Parametro de optimizador|Batch de entrenamiento|Epoca detenida tempranamente|precision-score|recall-score|f1-score|\n",
+    "|-----------|------------------------|----------------------|----------------------------|-------------------------|------------|--------|\n",
+    "|Adam|learning rate = $10^{-2}$|32|26|0.847|0.840|0.840|\n",
+    "|Adam|learning rate = $10^{-3}$|32|28|0.895|0.892|0.893|\n",
+    "|Adam|learning rate = $10^{-4}$|32|73|0.898|0.895|0.896|\n",
+    "|Adam|learning rate = $10^{-5}$|32|28|0.840|0.842|0.839|\n",
     "\n",
     "#### 6.1.2 Lenet modificado\n",
     "\n",
@@ -647,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45997002",
+   "id": "dd1ac099",
    "metadata": {},
    "outputs": [],
    "source": []
