--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -309,7 +309,7 @@
     "pero obtuvimos los mejores resultados con:\n",
     "\n",
     "- p = 0.1 en la capa 2 y 0.2 en la capa 4\n",
-    "- p = 0 en la capa 2 y 0.2 en la capa 4."
+    "- p = 0.2 en la capa 2 y 0 en la capa 4."
    ]
   },
   {
@@ -658,7 +658,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -672,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
