--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -188,7 +188,7 @@
     "train_idx, valid_idx = next(sss)\n",
     "\n",
     "train_dataset = Subset(mnist_train_data, train_idx)\n",
-    "train_loader= DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "train_loader= DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
     "\n",
     "valid_dataset = Subset(mnist_train_data, valid_idx)\n",
     "valid_loader = DataLoader(valid_dataset, batch_size=256, shuffle=False)\n",
@@ -309,7 +309,7 @@
     "pero obtuvimos los mejores resultados con:\n",
     "\n",
     "- p = 0.1 en la capa 2 y 0.2 en la capa 4\n",
-    "- p = 0.2 en la capa 2 y 0 en la capa 4."
+    "- p = 0 en la capa 2 y 0.2 en la capa 4."
    ]
   },
   {
@@ -395,8 +395,8 @@
    "source": [
     "torch.manual_seed(12345) # Inicialización\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = Lenet5()\n",
-    "#model = Lenet5_mod()\n",
+    "#model = Lenet5()\n",
+    "model = Lenet5_mod()\n",
     "model = model.to(device)\n",
     "criterion = torch.nn.CrossEntropyLoss(reduction='sum')\n",
     "max_epochs = 100"
@@ -409,9 +409,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-5)\n",
-    "#optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
-    "#optimizer = optim.RMSprop(params, lr=0.01, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0, centered=False)"
+    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-4)\n",
+    "#optimizer = torch.optim.SGD(model.parameters(), lr=1e-4, momentum=0.9)\n",
+    "#optimizer = torch.optim.RMSprop(model.parameters(), lr=1e-4, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0.9, centered=False)"
    ]
   },
   {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cc90db6",
+   "id": "a9395bd2",
    "metadata": {},
    "source": [
     "### 6.1 Modelos resultantes\n",
@@ -638,19 +638,57 @@
     "|Adam|learning rate = $10^{-2}$|32|26|0.847|0.840|0.840|\n",
     "|Adam|learning rate = $10^{-3}$|32|28|0.895|0.892|0.893|\n",
     "|Adam|learning rate = $10^{-4}$|32|73|0.898|0.895|0.896|\n",
-    "|Adam|learning rate = $10^{-5}$|32|28|0.840|0.842|0.839|\n",
+    "|Adam|learning rate = $10^{-5}$|32|--|0.840|0.842|0.839|\n",
+    "|Adam|learning rate = $10^{-4}$|64|--|0.897|0.897|0.897|\n",
+    "|Adam|learning rate = $10^{-4}$|16|65|0.899|0.898|0.898|\n",
+    "|SGD|learning rate = $10^{-4}$ y momentum = $0.9$|16|35|0.893|0.892|0.892|\n",
+    "|SGD|learning rate = $10^{-4}$ y momentum = $0.5$|16|67|0.885|0.885|0.884|\n",
+    "|RMSprop|learning rate = $10^{-4}$, $\\alpha=0.99$, $\\varepsilon$=$10^{-8}$, weight decay=$0$,  y momentum=$0$|16|61|0.900|0.899|0.899|\n",
+    "|RMSprop|learning rate = $10^{-4}$, $\\alpha=0.5$, $\\varepsilon$=$10^{-8}$, weight decay=$0$,  y momentum=$0$|16|30|0.843|0.843|0.837|\n",
+    "|RMSprop|learning rate = $10^{-4}$, $\\alpha=0.99$, $\\varepsilon$=$10^{-8}$, weight decay=$0$,  y momentum=$0.9$|16|30|0.892|0.893|0.892|\n",
+    "\n",
+    "Se observa que el desempeño del modelo Lenet-5 utilizando optimizador Adam no varía mucho en score al cambiar la tasa de aprendizaje\n",
+    "sin embargo, se observa que el número de épocas necesarias aumenta al bajar la tasa de aprendizaje (comportamiento normal y esperado),\n",
+    "como su desempeño no varía mucho es viable utilizar una tasa de aprendizaje alta si se quiere entrenar y no se dispone de tiempo.\n",
+    "\n",
+    "Se oberva que al variar el momentum en el optimizador SGD se consigue poca variación de score pero un cambio importante en la cantidad\n",
+    "de épocas necesarias de entrenamiento.\n",
+    "\n",
+    "El mejor modelo se consuiguió utilizando el optimizador RMSprop entrenando durante 61 épocas donde\n",
+    "se alcanza un score de 0.900\n",
     "\n",
     "#### 6.1.2 Lenet modificado\n",
     "\n",
-    "|Optimizador|Parametro de optimizador|Batch de entrenamiento|precision-score|recall-score|f1-score|\n",
-    "|-----------|------------------------|----------------------|---------------|------------|--------|\n",
-    "|||||||"
+    "|Optimizador|Parametro de optimizador|Batch de entrenamiento|Epoca detenida tempranamente|precision-score|recall-score|f1-score|\n",
+    "|-----------|------------------------|----------------------|----------------------------|-------------------------|------------|--------|\n",
+    "|Adam|learning rate = $10^{-2}$|32|30|0.849|0.849|0.847|\n",
+    "|Adam|learning rate = $10^{-3}$|32|28|0.899|0.899|0.898|\n",
+    "|Adam|learning rate = $10^{-4}$|32|73|0.900|0.898|0.899|\n",
+    "|Adam|learning rate = $10^{-5}$|32|--|0.843|0.846|0.842|\n",
+    "|Adam|learning rate = $10^{-4}$|16|65|0.903|0.903|0.903|\n",
+    "\n",
+    "\n",
+    "### 6.2 Entrenamiento\n",
+    "Se considera un entrenamiento de 100 épocas usando early stopping con paciencia de 15 épocas\n",
+    "\n",
+    "\n",
+    "### 6.3 Matriz de confusión\n",
+    "Se observa que las clases más difíciles de clasificar coresponden a las clases 0, 2, 4 las cuales\n",
+    "son confundidas con la clase 6 esto se debe a que las categorías comparten una forma similar (Polera, Suéter, Chaqueta, Camisa),\n",
+    "también se confunde la clase 7 con la clase 9 (Zapatillas y Botas).\n",
+    "\n",
+    "\n",
+    "### 6.4 Observaciones\n",
+    "Se observa que el modelo propuesto presenta una leve mejora frente al modelo Lenet-5 original, sin embargo, presenta los mismos porblemas de\n",
+    "clasificacíon en las clases de prenda que son de la misma parte del cuerpo, debido a que no se realizó una aumentación de datos no se pudo solventar\n",
+    "este problema aunque debido a la naturaleza del Dataset (en concreto a los canales de color) es probable que no haya una mejora importante ya que las\n",
+    "clases confundidas no presentan características distintivas entre sí."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd1ac099",
+   "id": "50999b96",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -658,7 +696,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -672,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
