fe de erratas tabla metricas

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -409,9 +409,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(model.parameters(),lr = 1e-4)\n",
+    "#optimizer = torch.optim.Adam(model.parameters(),lr = 1e-4)\n",
     "#optimizer = torch.optim.SGD(model.parameters(), lr=1e-4, momentum=0.9)\n",
-    "#optimizer = torch.optim.RMSprop(model.parameters(), lr=1e-4, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0.9, centered=False)"
+    "optimizer = torch.optim.RMSprop(model.parameters(), lr=1e-4, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0, centered=False)"
    ]
   },
   {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9395bd2",
+   "id": "2a62d8ca",
    "metadata": {},
    "source": [
     "### 6.1 Modelos resultantes\n",
@@ -665,8 +665,9 @@
     "|Adam|learning rate = $10^{-3}$|32|28|0.899|0.899|0.898|\n",
     "|Adam|learning rate = $10^{-4}$|32|73|0.900|0.898|0.899|\n",
     "|Adam|learning rate = $10^{-5}$|32|--|0.843|0.846|0.842|\n",
-    "|Adam|learning rate = $10^{-4}$|16|65|0.903|0.903|0.903|\n",
-    "\n",
+    "|Adam|learning rate = $10^{-4}$|16|89|0.903|0.903|0.903|\n",
+    "|SGD|learning rate = $10^{-4}$ y momentum = $0.9$|16|35|0.896|0.896|0.896|\n",
+    "|RMSprop|learning rate = $10^{-4}$, $\\alpha=0.99$, $\\varepsilon$=$10^{-8}$, weight decay=$0$,  y momentum=$0$|16|61|0.904|0.904|0.904|\n",
     "\n",
     "### 6.2 Entrenamiento\n",
     "Se considera un entrenamiento de 100 épocas usando early stopping con paciencia de 15 épocas\n",
@@ -688,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50999b96",
+   "id": "274f5cc5",
    "metadata": {},
    "outputs": [],
    "source": []
